my-project-gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-project-service
spec:
  selector:
    app: my-project
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
